stable_put_toa+aoa

--- a/targets/PROJECTS/GENERIC-NR-5GC/CONF/gnb.sa.band78.fr1.106PRB.usrpn310.conf
+++ b/targets/PROJECTS/GENERIC-NR-5GC/CONF/gnb.sa.band78.fr1.106PRB.usrpn310.conf
@@ -10,10 +10,10 @@ gNBs =
     gNB_name  =  "gNB-Eurecom-5GNRBox";
 
     // Tracking area code, 0x0000 and 0xfffe are reserved values
-    tracking_area_code  =  1;
+    tracking_area_code  =  100;
     plmn_list = ({
-                  mcc = 208;
-                  mnc = 99;
+                  mcc = 466;
+                  mnc = 11;
                   mnc_length = 2;
                   snssaiList = (
                     {
@@ -34,7 +34,7 @@ gNBs =
 
     ssb_SubcarrierOffset                                      = 0;
     pdsch_AntennaPorts                                        = 1;
-    pusch_AntennaPorts                                        = 2;
+    pusch_AntennaPorts                                        = 2 ;
 
      pdcch_ConfigSIB1 = (
       {
@@ -204,7 +204,7 @@ gNBs =
 
 
     ////////// MME parameters:
-    amf_ip_address      = ( { ipv4       = "192.168.70.132";
+    amf_ip_address      = ( { ipv4       = "192.168.1.105";
                               ipv6       = "192:168:30::17";
                               active     = "yes";
                               preference = "ipv4";
@@ -214,10 +214,10 @@ gNBs =
 
     NETWORK_INTERFACES :
     {
-        GNB_INTERFACE_NAME_FOR_NG_AMF            = "demo-oai";
-        GNB_IPV4_ADDRESS_FOR_NG_AMF              = "192.168.70.129/24";
-        GNB_INTERFACE_NAME_FOR_NGU               = "demo-oai";
-        GNB_IPV4_ADDRESS_FOR_NGU                 = "192.168.70.129/24";
+        GNB_INTERFACE_NAME_FOR_NG_AMF            = "wlx08beac02483e";
+        GNB_IPV4_ADDRESS_FOR_NG_AMF              = "192.168.1.103/24";
+        GNB_INTERFACE_NAME_FOR_NGU               = "wlx08beac02483e";
+        GNB_IPV4_ADDRESS_FOR_NGU                 = "192.168.1.103/24";
         GNB_PORT_FOR_S1U                         = 2152; # Spec 2152
     };
 
@@ -229,7 +229,7 @@ MACRLCs = (
         num_cc                      = 1;
         tr_s_preference             = "local_L1";
         tr_n_preference             = "local_RRC";
-        ulsch_max_slots_inactivity  = 100;
+        ulsch_max_slots_inactivity  = 100; ###
         pusch_TargetSNRx10          = 200;
         pucch_TargetSNRx10          = 200;
     }
@@ -257,7 +257,8 @@ RUs = (
          #beamforming 1x4 matrix:
          bf_weights = [0x00007fff, 0x0000, 0x0000, 0x0000];
          clock_src = "internal";
-         sdr_addrs = "addr=192.168.20.2,mgmt_addr=192.168.20.2";
+         sdr_addrs = "addr=192.168.20.2,mgmt_addr=192.168.20.2,second_addr=192.168.10.2";
+         #sdr_addrs = "addr=192.168.20.2,mgmt_addr=192.168.20.2";
     }
 );
 
